--- a/src/styles/canvasEditor.module.css
+++ b/src/styles/canvasEditor.module.css
@@ -1,5 +1,5 @@
 .fileContainer {
-  @apply border border-solid border-[#0000001c] w-[40rem] p-[10px] rounded-lg text-sm 
+  @apply border border-solid border-[#0000001c] w-[40rem] rounded-lg text-sm 
           flex items-start justify-center flex-col;
 }
 
